# scribe

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: extract.py  main.py  transcribe.py  ws.py
client/: package.json  pnpm-lock.yaml
client/src/: config.ts  context.tsx
client/src/app/: layout.tsx  page.tsx
client/src/app/transcribe/: page.tsx
client/src/components/: Annotation.tsx  FormatText.tsx  Transcribe.tsx
