[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Freeman Jiang <freeman.jiang.ca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
moviepy = "^1.0.3"
python-multipart = "^0.0.6"
fastapi-cors = "^0.0.6"
pytube = "^15.0.0"
openai = "^1.10.0"
python-dotenv = "^1.0.1"
validators = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
